added subheadings to table

--- a/patient_data.html
+++ b/patient_data.html
@@ -37,7 +37,7 @@
                 <td>Marv McGimpery</td>
                 <td>56901</td>
                 <td>23</td>
-                <td>Generalized Anxiety Disorder</td>
+                <td>Epilepsy</td>
                 <td>64</td>
                 <td>112/72</td>
             </tr>
